# steiner_cpp

./: CMakeLists.txt  Graph.cpp  Graph.h  HashSetLabelStore.cpp  HashSetLabelStore.h  HsvSolver.cpp  HsvSolver.h  HybridSolver.h  LabelIterator.h  LabelStore.h  README.md  Steiner.h  SteinerInstance.cpp  SteinerInstance.h  SteinerSolver.h  SteinerTree.h  main.cpp  steiner.h
Algorithms/: DualAscent.cpp  DualAscent.h  GraphPruner.cpp  GraphPruner.h  LocalOptimization.cpp  LocalOptimization.h  ShortestPath.cpp  ShortestPath.h  SteinerLength.cpp  SteinerLength.h  UnionFind.h  VoronoiDiagram.h
Heuristic/: DualAscentHeuristic.cpp  DualAscentHeuristic.h  MstHeuristic.cpp  MstHeuristic.h  SteinerHeuristic.h
Parser/: DimacsParser.cpp  DimacsParser.h  SteinerParser.h
Reductions/: Degree3Reduction.cpp  Degree3Reduction.h  DegreeReduction.cpp  DegreeReduction.h  DualAscentReduction.cpp  DualAscentReduction.h  HeavyEdgeReduction.cpp  HeavyEdgeReduction.h  LongEdgeReduction.cpp  LongEdgeReduction.h  MstPreselection.cpp  MstPreselection.h  NearestVertexPreselection.cpp  NearestVertexPreselection.h  NtdkReduction.cpp  NtdkReduction.h  QuickCollection.h  Reducer.cpp  Reducer.h  Reduction.h  SdcReduction.cpp  SdcReduction.h  ShortLinksPreselection.cpp  ShortLinksPreselection.h  TerminalDistanceReduction.cpp  TerminalDistanceReduction.h  ZeroEdgePreselection.cpp  ZeroEdgePreselection.h
Structures/: BucketQueue.cpp  BucketQueue.h  LinkedStack.h  Queue.h
dynamic/: DualAscentHeuristic.cpp  DualAscentHeuristic.h  HashSetLabelStore.cpp  HashSetLabelStore.h  HsvSolver.cpp  HsvSolver.h  (+6 more)
